[gd_scene load_steps=6 format=3 uid="uid://8vwyx0sggow5"]

[ext_resource type="Shader" uid="uid://df8ad865lg0bd" path="res://Scenes/Camera/FullScreenEffects/chromatic_aberration.gdshader" id="1_5qws4"]
[ext_resource type="Script" uid="uid://b84sp3j4j7ywv" path="res://Scenes/Camera/FullScreenEffects/full_screen_effects.gd" id="1_rflc2"]
[ext_resource type="Shader" uid="uid://5uh6xi4ap7vo" path="res://TestSandbox/ShaderTest/Monochrome/monochrome_2.gdshader" id="3_duef4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_11kyp"]
shader = ExtResource("1_5qws4")
shader_parameter/strength = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o1h5g"]
shader = ExtResource("3_duef4")
shader_parameter/ACTIVE = false

[node name="FullScreenEffects" type="Node"]
script = ExtResource("1_rflc2")

[node name="HighLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="ChromaticAberration" type="ColorRect" parent="HighLayer"]
material = SubResource("ShaderMaterial_11kyp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackLayer" type="CanvasLayer" parent="."]
editor_description = "Only changes the background"
layer = 0

[node name="Monochrome" type="ColorRect" parent="BackLayer"]
material = SubResource("ShaderMaterial_o1h5g")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
